compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__attribute_javascript.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(javascript, \"./one.mjs\", \"oneJs\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  one =
    x:
    builtins.throw
      (makeError
        "todo"
        "my/mod"
        4
        "one"
        "`todo` expression evaluated. This code has not yet been implemented."
        { });
  
  main = { }: one 1;
in
{ inherit one main; }
