compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__attribute_nix.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./one.nix\", \"oneNix\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(nix, "./one.nix", "oneNix")
pub fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED NIX
let
  one = (builtins.import ./one.nix).oneNix;
  
  main = { }: one 1;
in
{ inherit one main; }
