compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__erlang_only.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\npub fn should_be_generated(x: Int) -> Int {\n  x\n}\n\n@external(erlang, \"one\", \"one\")\npub fn should_not_be_generated(x: Int) -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn should_be_generated(x: Int) -> Int {
  x
}

@external(erlang, "one", "one")
pub fn should_not_be_generated(x: Int) -> Int


----- COMPILED NIX
let should_be_generated = x: x; in { inherit should_be_generated; }
