compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__home_path-2.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"~\", \"inspect\")\nfn home(x: anything) -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(nix, "~", "inspect")
fn home(x: anything) -> Nil


----- ERROR
error: Invalid Nix module
  ┌─ /src/one/two.gleam:3:1
  │
3 │ fn home(x: anything) -> Nil
  │ ^^^^^^^^^^^^^^^^^^^^

The function `home` has an external Nix implementation but the module path
`~` is not valid. Currently, it must be a relative path (`./here.nix` or
`../top.nix`) with a restricted set of ASCII characters. To import from
unsupported paths, re-export them in an auxiliary Nix file in your project
instead.
